--- a/index.html
+++ b/index.html
@@ -8,28 +8,74 @@
 		<link rel="stylesheet" type="text/css" href="c:/users/teste/aula_bootstrap/css/style.css">
 	</head>
 	<body>
-	<nav class="navbar navbar-expand-lg navbar-light">
+	<nav class="navbar navbar-expand-lg navbar-light margin">
 		<a class="navbar-brand" href="#">
 			<img src="c:/users/teste/aula_bootstrap/img/GLStudio.png" width="220px" height="80px" alt="GLobal Labs logo">
 		</a>
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Quem somos</a>
+					<a class="nav-link" href="#quemsomos">Quem somos</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Parceiros</a>
+					<a class="nav-link" href="#parceiros">Parceiros</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Serviços</a>
+					<a class="nav-link" href="#servicos">Serviços</a>
 				</li>
 			</ul>
 		</div>
 	</nav>
 	<section id="quemsomos">
 		<div class="container-fluid quemsomos text-center margin">
-			<p>Teste</p>
+			<h3 class="margin">Que somos</h3>
+			<img src="c:users/teste/aula_bootstrap/img/time.jpeg" alt="imagem time" class="rounded-circle" width="400px" height="400px">
+			<h3> Somos um time comprometido com os resultados.</h3>
 		</div>
 	</section>
+	<section id="parceiros">
+		<div class="container-fluid text-center margin parceiros">
+			<h3 class="margin">Parceiros</h3>
+			<div class="container" >
+				<div class="row">
+					<div class="col-lg-4">
+						<img src="c:/users/teste/aula_bootstrap/img/digital.logo.png" width="100%">
+					</div>
+					<div class="col-lg-4">
+						<img src="c:/users/teste/aula_bootstrap/img/digital.logo.png" width="100%">
+					</div>
+					<div class="col-lg-4">
+						<img src="c:/users/teste/aula_bootstrap/img/digital.logo.png" width="100%">
+					</div>
+				
+				</div>
+			
+			</div>
+		</div>
+	</section>
+	<section id="servicos">
+		<div class="container-fluid text-center margin servicos">
+			<h3 class="margin">Serviços</h3>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4">
+						<p> Lorem ipsum dolor sit amet,consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+						<img src="c:/users/teste/aula_bootstrap/img/site1.jpeg" width="100%" height="200px">
+					</div>
+					<div class="col-lg-4">
+						<p> Lorem ipsum dolor sit amet,consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+						<img src="c:/users/teste/aula_bootstrap/img/site2.png" width="100%" height="200px">
+					</div>
+					<div class="col-lg-4">
+						<p> Lorem ipsum dolor sit amet,consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+						<img src="c:/users/teste/aula_bootstrap/img/site3.jpeg" width="100%" height="200px">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class=" container-fluid text-center bg-footer margin">
+		<p>Desenvolvido por Spencer</p>
+	</footer>
 	</body>
 </html>
